Fixed the way window visibility was handled

--- a/openmdao/visualization/n2_viewer/style/toolbar.css
+++ b/openmdao/visualization/n2_viewer/style/toolbar.css
@@ -9,7 +9,7 @@
     flex-direction: row;
     margin-left: 12px;
     margin-bottom: 20px;
-    z-index: 20;
+    z-index: 31;
     overflow: visible;
     height: 40px;
 }
@@ -103,7 +103,7 @@
     left: -65px;
     /* Start hidden */
     transition: left 0.5s;
-    z-index: 5;
+    z-index: 24;
     border-right: 1px solid gray;
     border-bottom: 1px solid gray;
 }
@@ -137,7 +137,7 @@
     align-items: center;
     justify-content: flex-end;
     cursor: pointer;
-    z-index: 30;
+    z-index: 25;
     transition: left 0.5s, transform 0.5s;
     border-top: 1px solid gray;
     border-right: 1px solid gray;
@@ -222,14 +222,14 @@
 .group-1 {
     background-color: #98daba;
     padding: 10px 0;
-    z-index: 5;
+    z-index: 36;
 }
 
 .group-2 {
     background-color: #7dcda6;
     padding: 20px 0 5px 0;
     margin-top: -20px;
-    z-index: 4;
+    z-index: 35;
     flex-direction: row;
     align-items: center;
 }
@@ -238,7 +238,7 @@
     background-color: #66b48e;
     padding: 20px 0 5px 0;
     margin-top: -20px;
-    z-index: 3;
+    z-index: 34;
     height: 155px;
 }
 
@@ -246,14 +246,14 @@
     background-color: #42926b;
     padding: 20px 0 5px 0;
     margin-top: -20px;
-    z-index: 2;
+    z-index: 33;
 }
 
 .group-5 {
     background-color: #30684d;
     padding: 20px 0 7px 0;
     margin-top: -20px;
-    z-index: 1;
+    z-index: 32;
 }
 
 #collapse-expandable {
